[gd_scene load_steps=10 format=3 uid="uid://dt77qavjtbfmp"]

[ext_resource type="Script" path="res://boilerplate/audio/audio_manager.gd" id="1_wltfe"]
[ext_resource type="AudioStream" uid="uid://1s0hk0im2r3q" path="res://boilerplate/audio/focus_placeholder.wav" id="2_xof06"]
[ext_resource type="AudioStream" uid="uid://mek3770t1mx1" path="res://boilerplate/audio/click_placeholder.wav" id="3_hk0dv"]
[ext_resource type="AudioStream" uid="uid://jrj83g5tui2f" path="res://game/BGM/2023-07-31.mp3" id="4_kyhcx"]
[ext_resource type="AudioStream" uid="uid://1iak481be8rf" path="res://game/BGM/2023-08-03.mp3" id="5_nqwlp"]

[sub_resource type="Animation" id="Animation_ki3h1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-80.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:stream_paused")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_imx6k"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-80.0, 0.0]
}

[sub_resource type="Animation" id="Animation_f0rak"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -80.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:stream_paused")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ow53j"]
_data = {
"RESET": SubResource("Animation_ki3h1"),
"fade_in": SubResource("Animation_imx6k"),
"fade_out": SubResource("Animation_f0rak")
}

[node name="audio_manager" type="Node"]
script = ExtResource("1_wltfe")

[node name="ButtonHover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_xof06")
bus = &"SFX"

[node name="ButtonClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_hk0dv")
bus = &"SFX"

[node name="BGM1" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("4_kyhcx")
bus = &"BGM"

[node name="AnimationPlayer" type="AnimationPlayer" parent="BGM1"]
libraries = {
"": SubResource("AnimationLibrary_ow53j")
}

[node name="BGM2" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("5_nqwlp")
volume_db = -80.0
bus = &"BGM"

[node name="AnimationPlayer" type="AnimationPlayer" parent="BGM2"]
libraries = {
"": SubResource("AnimationLibrary_ow53j")
}

[connection signal="finished" from="BGM1" to="." method="_on_bgm_finished"]
[connection signal="finished" from="BGM2" to="." method="_on_bgm_finished"]
